durable PoC: CHILDREN_OF_PARENT anchors on the parent's identity, not a pair
The shipped listEntities takes a catalog id and a parent id, which invites the
conclusion that the scope must carry both. It does not. The entities primary key
is (realm_id, id), so parent_id alone identifies the parent and
WHERE realm_id = ? AND parent_id = ? is correct on its own.

catalog_id earns its place in the shipped query for one reason: the only index
that could serve a children lookup is the uniqueness constraint
(realm_id, catalog_id, parent_id, type_code, name), and its leading columns are
realm_id, catalog_id. Nothing is declared on (realm_id, parent_id), and the schema
file's own comment says "TODO: create indexes based on all query pattern".

Putting catalog_id in the contract would put one backend's index layout into a
contract every backend implements, which ADR-0010 rules out. So the anchor is the
parent's identity, and the consequence is this backend's to absorb: it needs an
index on (realm_id, parent_id). That is a schema change, named in the javadoc
rather than made here.